--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,6 @@ declared-services:
 applications:
 - services:
   - tradeoff-analytics-service
-  name: tradeoff-analytics-java
+  name: OutThink tradeoff-analytics-java
   path: webApp.war
   memory: 512M
